Fix up button spacing

--- a/source/assets/stylesheets/modules/_button.sass
+++ b/source/assets/stylesheets/modules/_button.sass
@@ -9,6 +9,7 @@
   border-radius: $b-borderRadius
   display: block
   margin-bottom: ($b-space * 0.35)
+  padding: ($b-space * 0.1)
   text-align: center
 
 // -------------------------------------
